# qvdrs

./: .gitignore  Cargo.toml  LEGAL.md  LICENSE  README.md  RELEASE_NOTES.md  build.rs  docs.md  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml  test_node.mjs  test_node_all.mjs
.github/workflows/: ci.yml  release-binaries.yml  release-crate.yml  release-npm.yml  release-pypi.yml
docs/: api_reference.md  python_examples.md  rust_examples.md  typescript_examples.md
examples/: read_qvd.rs  roundtrip.rs  roundtrip_all.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: concat.rs  datafusion.rs  error.rs  exists.rs  header.rs  index.rs  lib.rs  napi.rs  parquet.rs  python.rs  reader.rs  streaming.rs  symbol.rs  value.rs  writer.rs
tests/: convert_all.rs  roundtrip_compare.rs  test_python_integrations.py
