[package]
name = "qvd"
version = "0.6.2"
edition = "2021"
description = "High-performance library for reading, writing and converting Qlik QVD files with Parquet/Arrow/DataFusion support"
license = "MIT"
repository = "https://github.com/bintocher/qvdrs"
homepage = "https://github.com/bintocher/qvdrs"
documentation = "https://docs.rs/qvd"
readme = "README.md"
keywords = ["qvd", "qlik", "parquet", "arrow", "datafusion"]
categories = ["parser-implementations", "encoding", "command-line-utilities"]
authors = ["Stanislav Chernov <bintocher>"]
exclude = ["qvd_input/", "qvd_output/", "*.qvd", "*.parquet"]

[lib]
name = "qvd"
crate-type = ["lib", "cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"], optional = true }
parquet = { version = "58", optional = true }
arrow = { version = "58", default-features = false, features = ["chrono-tz"], optional = true }
chrono = { version = "0.4", optional = true }
clap = { version = "4.6", features = ["derive"], optional = true }
datafusion = { version = "53", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[features]
default = []
parquet_support = ["parquet", "arrow", "chrono"]
datafusion_support = ["dep:datafusion", "dep:async-trait", "dep:tokio", "parquet_support"]
python = ["pyo3", "parquet", "arrow", "chrono", "arrow/pyarrow", "arrow/ffi"]
cli = ["parquet_support", "clap"]

[dev-dependencies]
md5 = "0.7"

[[example]]
name = "read_qvd"
path = "examples/read_qvd.rs"

[[example]]
name = "roundtrip"
path = "examples/roundtrip.rs"

[[example]]
name = "roundtrip_all"
path = "examples/roundtrip_all.rs"

[[bin]]
name = "qvd-cli"
path = "src/bin/qvd.rs"
required-features = ["cli"]
